package main.ex1;

import java.util.List;

public class FileHandler {
    public static List<Pet> load() {
        return null;
    }

    public static void save(List<Appointment> appointments) {
    }

    public static void save(List<Appointment> appointments, String path) {
    }

    public static void save(List<Appointment> appointments, String path, String fileName) {
    }

    public static void save(List<Appointment> appointments, String path, String fileName, String extension) {
    }
}